--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
-		<title>HexiEarth</title>
+		<title>元数据管理系统</title>
 		<script src="./static/HXWEarth/HXWEarth.js"></script>
 		<link href="./static/HXWEarth/Widgets/hxWidgets.css" type="text/css" rel="stylesheet" />
 		<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
