--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
-		<title>元数据管理系统</title>
+		<title>三维可视化元数据管理系统</title>
 		<script src="./static/HXWEarth/HXWEarth.js"></script>
 		<link href="./static/HXWEarth/Widgets/hxWidgets.css" type="text/css" rel="stylesheet" />
-		<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
-		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"> -->
-		<!-- <link rel="stylesheet" href="https://fonts.cat.net/">
-    <link rel="stylesheet" href="https://fonts.cat.net/"> -->
 	</head>
 	<body>
 		<noscript>
